--- a/index.html
+++ b/index.html
@@ -45,54 +45,11 @@
     header h1{ margin:0; font-size:20px; letter-spacing:0.2px; }
     header p{ margin:6px 0 0 0; color:var(--muted); font-size:13px; }
 
-    .viewer-label{
-      text-align:center;
-      margin:12px 0 8px;
-      font-size:13px;
-      color:var(--muted);
-      opacity:0.9;
-      font-weight:500;
-    }
-
     .viewer-wrap{
       background:var(--glass);
       padding:14px;
       border-radius:10px;
-      position: relative;
-      overflow: hidden;
     }
-
-    .placeholder {
-      position: absolute;
-      inset: 14px;
-      border-radius: 8px;
-      background: linear-gradient(180deg, #071018, #001018);
-      box-shadow: inset 0 -20px 60px rgba(0,0,0,0.6);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      color: var(--muted);
-      font-size: 14px;
-      gap: 12px;
-      transition: opacity 0.3s ease;
-      z-index: 2;
-    }
-
-    .placeholder .icon {
-      width: 80px;
-      height: 80px;
-      background: var(--accent);
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 32px;
-      font-weight: bold;
-      color: #000;
-      opacity: 0.9;
-    }
-
     model-viewer{
       width:100%;
       height:520px;
@@ -100,10 +57,6 @@
       background:linear-gradient(180deg,#071018,#001018);
       box-shadow: inset 0 -20px 60px rgba(0,0,0,0.6);
       transition: opacity 0.3s ease;
-      touch-action: pan-y;
-      display: none;
-      position: relative;
-      z-index: 1;
     }
 
     .controls{
@@ -187,7 +140,7 @@
     .summary{ font-size:13px; color:var(--muted); margin-top:8px; min-height:36px; }
 
     form{display:flex; flex-direction:column; gap:10px}
-    input[type="text"], input[type="email"], textarea{
+    input[type="text"], input[type="email"], textarea, select{
       width:100%;
       padding:10px;
       border-radius:8px;
@@ -207,20 +160,14 @@
       box-shadow: 0 8px 24px rgba(0,209,255,0.08);
       transition: transform 0.2s;
     }
-    button:hover:not(:disabled) { transform: translateY(-1px); }
-    button:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-      transform: none;
-    }
+    button:hover { transform: translateY(-1px); }
     .small{ font-size:12px; color:var(--muted) }
 
     footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
     @media (max-width:980px){
       .card{ grid-template-columns: 1fr; padding:14px; }
-      model-viewer, .placeholder { height:400px; }
-      .placeholder .icon { width: 60px; height: 60px; font-size: 28px; }
+      model-viewer{ height:400px; }
       .qty-wrap { margin-left: 0; margin-top: 6px; width: 100%; justify-content: flex-end; }
     }
   </style>
@@ -233,15 +180,9 @@
         <p>Przeglądaj model 3D, wybierz elementy i wyślij zapytanie.</p>
       </header>
 
-      <div class="viewer-label" id="viewerLabel">Wybierz element, aby zobaczyć model 3D</div>
-
-      <div class="viewer-wrap" id="viewerWrap">
-        <div id="placeholder" class="placeholder">
-          <div class="icon">Barrier</div>
-          <div class="text">Wybierz element, aby zobaczyć model 3D</div>
-        </div>
-
+      <div class="viewer-wrap" style="margin-top:12px;">
         <model-viewer id="mv"
+          src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf"
           alt="Podgląd 3D wybranego elementu bariery ochronnej"
           aria-label="Interaktywny model 3D bariery – obracaj, przybliżaj, użyj AR"
           camera-controls
@@ -252,8 +193,7 @@
           shadow-intensity="1"
           environment-image="neutral"
           camera-orbit="0deg 75deg 2.5m"
-          loading="lazy"
-          touch-action="pan-y">
+          loading="eager">
 
           <button slot="ar-button" style="background:#00d1ff; color:#000; border:none; padding:10px 20px; border-radius:8px; font-weight:700; margin:12px;">
             Zobacz w AR
@@ -283,7 +223,7 @@
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
-              <input type="number" class="qty" min="1" max="999" value="1" step="1" inputmode="numeric">
+              <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric">
               <span class="qty-unit">szt.</span>
             </div>
           </label>
@@ -298,7 +238,7 @@
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
-              <input type="number" class="qty" min="1" max="999" value="1" step="1" inputmode="numeric">
+              <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric">
               <span class="qty-unit">szt.</span>
             </div>
           </label>
@@ -313,7 +253,7 @@
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
-              <input type="number" class="qty" min="1" max="999" value="1" step="1" inputmode="numeric">
+              <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric">
               <span class="qty-unit">szt.</span>
             </div>
           </label>
@@ -328,7 +268,7 @@
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
-              <input type="number" class="qty" min="1" max="999" value="1" step="1" inputmode="numeric">
+              <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric">
               <span class="qty-unit">szt.</span>
             </div>
           </label>
@@ -343,7 +283,7 @@
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
-              <input type="number" class="qty" min="1" max="999" value="1" step="1" inputmode="numeric">
+              <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric">
               <span class="qty-unit">szt.</span>
             </div>
           </label>
@@ -356,14 +296,14 @@
         <label class="section-title">Szczegóły zapytania</label>
         <form id="requestForm" action="https://formsubmit.co/provercel@proton.me" method="POST">
           <input type="text" name="_honey" style="display:none">
-          <input type="hidden" name="_next" value="https://provercel.vercel.app/thanks">
+          <input type="hidden" name="_next" value="https://provercel.vercel.app/">
           <input type="hidden" name="_subject" id="formSubject" value="Zapytanie z Provercel - 3D">
 
           <label class="small">Firma / Imię</label>
-          <input type="text" name="client_name" placeholder="Nazwa firmy lub imię" autocomplete="organization" />
+          <input type="text" name="client_name" placeholder="Nazwa firmy lub imię" />
 
           <label class="small">Adres e-mail</label>
-          <input type="email" name="client_email" placeholder="twoj@proton.me" required autocomplete="email" />
+          <input type="email" name="client_email" placeholder="twoj@proton.me" required />
 
           <label class="small">Uwagi</label>
           <textarea name="notes" rows="3" placeholder="Dodatkowe informacje (termin, montaż, itp.)"></textarea>
@@ -382,33 +322,13 @@
 
   <script>
     const mv = document.getElementById('mv');
-    const viewerWrap = document.getElementById('viewerWrap');
-    const placeholder = document.getElementById('placeholder');
-    const viewerLabel = document.getElementById('viewerLabel');
     const optionsList = document.getElementById('optionsList');
     const summary = document.getElementById('summary');
     const hiddenInput = document.getElementById('selected_items');
     const formSubject = document.getElementById('formSubject');
     const form = document.getElementById('requestForm');
 
-    const FALLBACK_MODEL = 'https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf';
-
-    function showPlaceholder() {
-      placeholder.style.opacity = '1';
-      placeholder.style.display = 'flex';
-      mv.style.display = 'none';
-      mv.src = '';
-      viewerLabel.textContent = 'Wybierz element, aby zobaczyć model 3D';
-    }
-
-    function showModel(src) {
-      placeholder.style.opacity = '0';
-      setTimeout(() => {
-        placeholder.style.display = 'none';
-        mv.style.display = 'block';
-        loadModel(src);
-      }, 300);
-    }
+    const DEFAULT_MODEL = 'https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf';
 
     function loadModel(src, retries = 3) {
       if (mv.src === src) return;
@@ -421,17 +341,18 @@
       };
 
       const onError = (attempt) => {
-        console.warn(`Błąd ładowania (próba ${attempt}): ${src}`);
+        console.warn(`Błąd ładowania modelu (próba ${attempt}): ${src}`);
         if (attempt < retries) {
           setTimeout(() => loadModel(src, retries - 1), 1000 * attempt);
         } else {
-          showPlaceholder();
-          console.error('Fallback do placeholdera');
+          console.error('Ostateczny błąd – fallback do domyślnego');
+          mv.src = DEFAULT_MODEL;
         }
       };
 
       mv.onload = null;
       mv.onerror = null;
+
       mv.addEventListener('load', onLoad, { once: true });
       mv.addEventListener('error', () => onError(1), { once: true });
 
@@ -444,6 +365,22 @@
         option.classList.toggle('selected', checkbox.checked);
       });
     }
+
+    optionsList.addEventListener('change', (e) => {
+      if (!e.target.classList.contains('item-check')) return;
+      const qtyWrap = e.target.closest('.option').querySelector('.qty-wrap');
+      qtyWrap.style.display = e.target.checked ? 'flex' : 'none';
+      if (!e.target.checked) {
+        const qtyInput = qtyWrap.querySelector('.qty');
+        qtyInput.value = 1;
+      }
+
+      const checked = optionsList.querySelectorAll('.item-check:checked');
+      loadModel(checked.length > 0 ? checked[0].dataset.model : DEFAULT_MODEL);
+
+      updateSummary();
+      updateHighlights();
+    });
 
     function updateSummary() {
       const items = Array.from(optionsList.querySelectorAll('.option'));
@@ -465,34 +402,7 @@
       summary.textContent = selected.length ? 'Wybrane: ' + selected.join(' • ') : 'Wybrane: brak';
       hiddenInput.value = selected.length ? selected.map(s => s.replace(/ × /g, 'x')).join('; ') : '';
       formSubject.value = totalQty ? `Zapytanie z Provercel - 3D (${totalQty} szt.)` : 'Zapytanie z Provercel - 3D';
-
-      const checked = optionsList.querySelectorAll('.item-check:checked');
-      if (checked.length === 1) {
-        viewerLabel.textContent = checked[0].dataset.name;
-      } else if (checked.length > 1) {
-        viewerLabel.textContent = `${checked.length} elementy wybrane`;
-      }
     }
-
-    optionsList.addEventListener('change', (e) => {
-      if (!e.target.classList.contains('item-check')) return;
-
-      const option = e.target.closest('.option');
-      const qtyWrap = option.querySelector('.qty-wrap');
-      qtyWrap.style.display = e.target.checked ? 'flex' : 'none';
-      if (!e.target.checked) qtyWrap.querySelector('.qty').value = 1;
-
-      const checked = optionsList.querySelectorAll('.item-check:checked');
-
-      if (checked.length === 0) {
-        showPlaceholder();
-      } else {
-        showModel(checked[0].dataset.model);
-      }
-
-      updateSummary();
-      updateHighlights();
-    });
 
     document.getElementById('resetView').addEventListener('click', () => {
       mv.cameraOrbit = '0deg 75deg 2.5m';
@@ -515,28 +425,17 @@
         e.preventDefault();
         return;
       }
-
-      const submitBtn = form.querySelector('button[type="submit"]');
-      if (submitBtn.disabled) return;
-      submitBtn.disabled = true;
-      submitBtn.textContent = 'Wysyłanie...';
-
       try {
         const cam = mv.getCameraOrbit();
         const extra = `\n\n---\nWidok 3D: obrót=${cam.theta.toFixed(0)}°, nachylenie=${cam.phi.toFixed(0)}°, odległość=${cam.radius.toFixed(2)}m`;
         const notesField = form.querySelector('textarea[name="notes"]');
         notesField.value = (notesField.value.trim() + extra).trim();
       } catch (err) {}
-
-      setTimeout(() => {
-        submitBtn.disabled = false;
-        submitBtn.textContent = 'Wyślij zapytanie';
-      }, 3000);
     });
 
-    // Start: placeholder
+    // Inicjalizacja
     window.addEventListener('load', () => {
-      showPlaceholder();
+      loadModel(DEFAULT_MODEL);
       updateSummary();
       updateHighlights();
     });
