--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Provercel — Barierowe rozwiązania 3D</title>
 
+  <!-- SEO -->
+  <meta name="description" content="Provercel – interaktywny konfigurator barier ochronnych 3D. Wybierz słupy, przęsła, złącza i wyślij zapytanie.">
+  <link rel="canonical" href="https://provercel.vercel.app/">
+
   <!-- Model Viewer -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
+  <!-- Preload domyślnego modelu (lepszy UX) -->
+  <link rel="preload" href="https://github.com/KhronosGroup/glTF-Sample-Models/raw/master/2.0/Box/glTF-Binary/Box.glb" as="fetch" crossorigin="anonymous">
 
   <style>
     :root{
@@ -182,7 +189,7 @@
 
       <div class="viewer-wrap" style="margin-top:12px;">
         <model-viewer id="mv"
-          src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf"
+          src=""
           alt="Podgląd 3D wybranego elementu bariery ochronnej"
           aria-label="Interaktywny model 3D bariery – obracaj, przybliżaj, użyj AR"
           camera-controls
@@ -193,7 +200,14 @@
           shadow-intensity="1"
           environment-image="neutral"
           camera-orbit="0deg 75deg 2.5m"
-          loading="eager">
+          loading="lazy"
+          interaction-prompt="none"
+          touch-action="pan-y"
+          poster="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mNkYPhfDwAChwGA60e6kgAAAABJRU5ErkJggg==">
+
+          <div slot="poster" style="display:flex; align-items:center; justify-content:center; height:100%; color:#9aa6b2; font-size:14px; padding:20px; text-align:center; background:#071018;">
+            Zaznacz element z listy, aby zobaczyć model 3D
+          </div>
 
           <button slot="ar-button" style="background:#00d1ff; color:#000; border:none; padding:10px 20px; border-radius:8px; font-weight:700; margin:12px;">
             Zobacz w AR
@@ -223,7 +237,7 @@
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
-              <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric">
+              <input type="number" class="qty" min="1" max="999" value="1" step="1" inputmode="numeric">
               <span class="qty-unit">szt.</span>
             </div>
           </label>
@@ -238,7 +252,7 @@
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
-              <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric">
+              <input type="number" class="qty" min="1" max="999" value="1" step="1" inputmode="numeric">
               <span class="qty-unit">szt.</span>
             </div>
           </label>
@@ -253,7 +267,7 @@
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
-              <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric">
+              <input type="number" class="qty" min="1" max="999" value="1" step="1" inputmode="numeric">
               <span class="qty-unit">szt.</span>
             </div>
           </label>
@@ -268,7 +282,7 @@
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
-              <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric">
+              <input type="number" class="qty" min="1" max="999" value="1" step="1" inputmode="numeric">
               <span class="qty-unit">szt.</span>
             </div>
           </label>
@@ -283,7 +297,7 @@
             </div>
             <div class="qty-wrap">
               <span class="qty-label">Ilość:</span>
-              <input type="number" class="qty" min="1" max="999" value="1" inputmode="numeric">
+              <input type="number" class="qty" min="1" max="999" value="1" step="1" inputmode="numeric">
               <span class="qty-unit">szt.</span>
             </div>
           </label>
@@ -298,12 +312,13 @@
           <input type="text" name="_honey" style="display:none">
           <input type="hidden" name="_next" value="https://provercel.vercel.app/">
           <input type="hidden" name="_subject" id="formSubject" value="Zapytanie z Provercel - 3D">
+          <input type="hidden" name="_captcha" value="false">
 
           <label class="small">Firma / Imię</label>
-          <input type="text" name="client_name" placeholder="Nazwa firmy lub imię" />
+          <input type="text" name="client_name" placeholder="Nazwa firmy lub imię" autocomplete="organization" />
 
           <label class="small">Adres e-mail</label>
-          <input type="email" name="client_email" placeholder="twoj@proton.me" required />
+          <input type="email" name="client_email" placeholder="twoj@proton.me" required autocomplete="email" />
 
           <label class="small">Uwagi</label>
           <textarea name="notes" rows="3" placeholder="Dodatkowe informacje (termin, montaż, itp.)"></textarea>
@@ -328,10 +343,11 @@
     const formSubject = document.getElementById('formSubject');
     const form = document.getElementById('requestForm');
 
-    const DEFAULT_MODEL = 'https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf';
+    // Nowy, prosty model domyślny – Box.glb
+    const DEFAULT_MODEL = 'https://github.com/KhronosGroup/glTF-Sample-Models/raw/master/2.0/Box/glTF-Binary/Box.glb';
 
     function loadModel(src, retries = 3) {
-      if (mv.src === src) return;
+      if (!src || mv.src === src) return;
       mv.style.opacity = '0.5';
 
       const onLoad = () => {
@@ -347,6 +363,7 @@
         } else {
           console.error('Ostateczny błąd – fallback do domyślnego');
           mv.src = DEFAULT_MODEL;
+          mv.dispatchEvent(new Event('load'));
         }
       };
 
@@ -376,7 +393,8 @@
       }
 
       const checked = optionsList.querySelectorAll('.item-check:checked');
-      loadModel(checked.length > 0 ? checked[0].dataset.model : DEFAULT_MODEL);
+      const modelToLoad = checked.length > 0 ? checked[0].dataset.model : DEFAULT_MODEL;
+      loadModel(modelToLoad);
 
       updateSummary();
       updateHighlights();
@@ -433,7 +451,7 @@
       } catch (err) {}
     });
 
-    // Inicjalizacja
+    // Inicjalizacja – ładujemy prosty model Box jako przykład
     window.addEventListener('load', () => {
       loadModel(DEFAULT_MODEL);
       updateSummary();
