--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       width:100%;
       height:520px;
       border-radius:8px;
-      background:linear-gradient(180deg,#071018,#001018);
+      background:linear-gradient(135deg,#0a0e14,#001018);
       box-shadow: inset 0 -20px 60px rgba(0,0,0,0.6);
       transition: opacity 0.3s ease;
     }
@@ -165,6 +165,10 @@
 
     footer{ margin-top:12px; font-size:12px; color:var(--muted); }
 
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+
     @media (max-width:980px){
       .card{ grid-template-columns: 1fr; padding:14px; }
       model-viewer{ height:400px; }
@@ -182,7 +186,6 @@
 
       <div class="viewer-wrap" style="margin-top:12px;">
         <model-viewer id="mv"
-          src="https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf"
           alt="Podgląd 3D wybranego elementu bariery ochronnej"
           aria-label="Interaktywny model 3D bariery – obracaj, przybliżaj, użyj AR"
           camera-controls
@@ -193,13 +196,31 @@
           shadow-intensity="1"
           environment-image="neutral"
           camera-orbit="0deg 75deg 2.5m"
-          loading="eager">
+          loading="lazy">
+
+          <!-- PLACEHOLDER -->
+          <div slot="poster" style="
+            width:100%; height:100%; 
+            background: linear-gradient(135deg, #0a0e14, #001018);
+            display:flex; align-items:center; justify-content:center;
+            color:#4a6a8a; font-size:14px; flex-direction:column; gap:12px;
+            border-radius:8px;
+          ">
+            <div style="
+              width:60px; height:60px; 
+              border:3px solid #00d1ff; 
+              border-radius:50%; 
+              border-top-color:transparent; 
+              animation: spin 1.2s linear infinite;
+            "></div>
+            <div>Kliknij element, by zobaczyć model 3D</div>
+          </div>
 
           <button slot="ar-button" style="background:#00d1ff; color:#000; border:none; padding:10px 20px; border-radius:8px; font-weight:700; margin:12px;">
             Zobacz w AR
           </button>
 
-          <div slot="progress-bar" style="background:#333; height:4px; border-radius:2px;"></div>
+          <div slot="progress-bar" style="background:#333; height:4px; border-radius:2px; margin:0 12px 12px;"></div>
         </model-viewer>
       </div>
 
@@ -300,10 +321,10 @@
           <input type="hidden" name="_subject" id="formSubject" value="Zapytanie z Provercel - 3D">
 
           <label class="small">Firma / Imię</label>
-          <input type="text" name="client_name" placeholder="Nazwa firmy lub imię" />
+          <input type="text" name="client_name" placeholder="Nazwa firmy lub imię" autocomplete="organization" />
 
           <label class="small">Adres e-mail</label>
-          <input type="email" name="client_email" placeholder="twoj@proton.me" required />
+          <input type="email" name="client_email" placeholder="twoj@proton.me" required autocomplete="email" />
 
           <label class="small">Uwagi</label>
           <textarea name="notes" rows="3" placeholder="Dodatkowe informacje (termin, montaż, itp.)"></textarea>
@@ -330,9 +351,11 @@
 
     const DEFAULT_MODEL = 'https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/DamagedHelmet/glTF/DamagedHelmet.gltf';
 
-    function loadModel(src, retries = 3) {
-      if (mv.src === src) return;
+    function loadModel(src) {
+      if (!src || mv.src === src) return;
+
       mv.style.opacity = '0.5';
+      mv.src = src;
 
       const onLoad = () => {
         mv.style.opacity = '1';
@@ -340,27 +363,20 @@
         mv.jumpCameraToGoal();
       };
 
-      const onError = (attempt) => {
-        console.warn(`Błąd ładowania modelu (próba ${attempt}): ${src}`);
-        if (attempt < retries) {
-          setTimeout(() => loadModel(src, retries - 1), 1000 * attempt);
-        } else {
-          console.error('Ostateczny błąd – fallback do domyślnego');
-          mv.src = DEFAULT_MODEL;
-        }
-      };
-
-      mv.onload = null;
-      mv.onerror = null;
-
       mv.addEventListener('load', onLoad, { once: true });
-      mv.addEventListener('error', () => onError(1), { once: true });
 
-      mv.src = src;
+      // Fallback na błąd/timeout
+      const timeout = setTimeout(() => {
+        console.warn('Timeout – fallback do domyślnego');
+        mv.src = DEFAULT_MODEL;
+        mv.style.opacity = '1';
+      }, 10000);
+
+      mv.addEventListener('load', () => clearTimeout(timeout), { once: true });
     }
 
     function updateHighlights() {
-      optionsList.querySelectorAll('.option').forEach(option => {
+      optionsList.query fileReaderAll('.option').forEach(option => {
         const checkbox = option.querySelector('.item-check');
         option.classList.toggle('selected', checkbox.checked);
       });
@@ -376,7 +392,14 @@
       }
 
       const checked = optionsList.querySelectorAll('.item-check:checked');
-      loadModel(checked.length > 0 ? checked[0].dataset.model : DEFAULT_MODEL);
+      const newSrc = checked.length > 0 ? checked[0].dataset.model : null;
+
+      if (newSrc) {
+        loadModel(newSrc);
+      } else {
+        mv.src = '';
+        mv.style.opacity = '1';
+      }
 
       updateSummary();
       updateHighlights();
@@ -426,16 +449,17 @@
         return;
       }
       try {
-        const cam = mv.getCameraOrbit();
-        const extra = `\n\n---\nWidok 3D: obrót=${cam.theta.toFixed(0)}°, nachylenie=${cam.phi.toFixed(0)}°, odległość=${cam.radius.toFixed(2)}m`;
-        const notesField = form.querySelector('textarea[name="notes"]');
-        notesField.value = (notesField.value.trim() + extra).trim();
+        if (typeof mv.getCameraOrbit === 'function') {
+          const cam = mv.getCameraOrbit();
+          const extra = `\n\n---\nWidok 3D: obrót=${Math.round(cam.theta)}°, nachylenie=${Math.round(cam.phi)}°, odległość=${cam.radius.toFixed(2)}m`;
+          const notesField = form.querySelector('textarea[name="notes"]');
+          notesField.value = (notesField.value.trim() + extra).trim();
+        }
       } catch (err) {}
     });
 
-    // Inicjalizacja
+    // Inicjalizacja – bez ładowania modelu
     window.addEventListener('load', () => {
-      loadModel(DEFAULT_MODEL);
       updateSummary();
       updateHighlights();
     });
